--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,13 @@
 <h1>My Tasks</h1>
 <form action="">
 <% @tasks.each do |task| %>
-  <input type="checkbox"><%= link_to task.title, task %> <%= link_to 'Delete', task_path(task), method: :delete %><br>
+  <% if task.completed? %>
+    <input type="checkbox" disabled checked>
+  <% else %>
+    <input type="checkbox" disabled>
+  <% end %>
+
+  <%= link_to task.title, task %> <%= link_to 'Delete', task_path(task), method: :delete %><br>
 <% end %>
 </form>
 <br>
